assets/css/style.css
/* ... */
header>div a {
    display: block;
    margin: 50px auto;
    color: var(--white);
    text-decoration: none;
    font-size: 20px;
    font-weight: 800;
    background-color:var(--yellow);
    width: 250px;
    padding: 25px 0;
    border-radius: 5px;
}

header>div a:hover {
    background-color: var(--dark-yellow);
}

@media (max-width: 768px) {
    header>div div:first-child {
        font-size: 25px;
    }
    header>div div:nth-child(2) {
        font-size: 40px;
    }
    header>div {
        padding-top: 150px;
    }
}

/* / HEADER */


/* ===================================== */


/* SERVICES */

#services>div {
    text-align: center;
}

.serv-info {
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 15px;
    padding-bottom: 100px;
}

.serv-info>div {
    width: 33%;
}

.serv-info>div>div {
    background-color: var(--yellow);
    height: 125px;
    width: 125px;
    margin-left: 28%;
    border-radius: 50%;
    margin-bottom: 15px;
    position: relative;
}

.serv-info>div>div i {
    font-size: 60px;
    padding: 30px;
    color: var(--white);
    position: absolute;
    left: -2%;
    top: 25%;
}

.serv-info>div:last-child>div i {
    left: 5%;
}

.serv-info>div>h4 {
    font-size: 25px;
    padding-bottom: 15px;
}

.serv-info>div>p {
    font-size: 18px;
    padding-bottom: 15px;
    color: var(--grey);
}

@media (max-width: 992px) {
    .serv-info {
        flex-direction: column;
        gap: 40px;
    }
    .serv-info>div {
        width: 80%;
    }
    .serv-info>div>div {
        margin: 0 auto 15px auto;
    }
}

/* / SERVICES */


/* ===================================== */


/* PORTFOLIO */

#portfolio {
    background-color: var(--light-grey);
}

.port-cards {
    display: flex;
    justify-content: space-between;
    flex-wrap: wrap;
    gap: 20px 0;
    padding-bottom: 100px;
}

.card {
    width: 32%;
}

.port-cards img {
    width: 100%;
}

.image {
    position: relative;
}

.image i {
    font-size: 60px;
    color: var(--white);
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    display: none;
}

.image:hover i {
    display: block;
}

.image::before {
    content: "";
    width: 100%;
    height: 100%;
    background-color: var(--yellow);
    position: absolute;
    display: none;
    opacity: 0.9;
}

.image:hover::before {
    display: block;
    cursor: pointer;
}

.caption {
    text-align: center;
    background-color: var(--white);
    width: 100%;
    padding: 25px;
    /* font-family: ; */
}

.caption h3 {
    font-size: 29px;
    padding-bottom: 5px;
}

.caption p {
    font-size: 18px;
    color: var(--grey);
    font-style: italic;
}

@media (max-width:992px) {
    .card {
        width: 48%;
    }

    .container {
        width: 70%;
    }
}

@media (max-width:768px) {
    /* .card {
        width: 48%;
    } */

    .container {
        width: 70%;
    }
}

@media (max-width:576px) {
    .card {
        width: 100%;
    }

    #portfolio div.container {
        width: 85%;
    
    }
    
}

/* / PORTFOLIO */


/* ===================================== */


/* ABOUT */ 

#about>div.container {
    padding-bottom: 100px;
}

.timeline {
    width: 90%;
    height: 1400px;
    position: relative;
    margin: 0 auto;
}

.timeline::before {
    content: "";
    position: absolute;
    width: 2px;
    height: 99%;
    background-color: var(--lightest-grey);
    left: 50%;
    z-index: -1;
}

.timeline>div {
    width: 70%;
    padding-bottom: 110px;
    display: flex;
    gap: 25px;
}

.tl-image {
    width: 170px;
    height: 170px;
    border: 7px solid var(--lightest-grey);
    border-radius: 50%;
    overflow: hidden;
}

.tl-image img {
    width: 100%;
    height: 100%;
    object-fit: cover;
}

.tl-image:last-child {
    background-color: var(--yellow);
}

.tl-image:last-child h4 {
    font-size: 20px;
    color: var(--white);
    text-align: center;
    line-height: 27px;
    padding-top: 35px;
    font-weight: 900;
}

.timeline h4 {
    font-size: 27px;
    line-height: 36px;
}

.timeline p {
    font-size: 19px;
    color: var(--grey);
    padding-top: 7px;
}

.tl-panel {
    line-height: 29px;
    width: 60%;
    padding: 0 20px;
}

.left {
    text-align: right;
    margin-right: 10%;
    padding-right: 27px ;
}

.right {
    margin-left: 42.55%;
}

@media (max-width: 992px) {
    .timeline::before {
        left: 10%;
    }
    .timeline>div {
        width: 100%;
        flex-direction: row-reverse;
        justify-content: flex-end;
    }
    .left {
        text-align: left;
        margin-right: 0;
        padding-right: 0;
    }
    .right {
        margin-left: 0;
    }
    .tl-panel {
        width: 75%;
        padding: 0 10px;
    }
    .tl-image {
        width: 100px;
        height: 100px;
        border-width: 4px;
        flex-shrink: 0;
    }
    .tl-image:last-child h4 {
        font-size: 14px;
        line-height: normal;
        padding-top: 15px;
    }
    .timeline h4 {
        font-size: 20px;
        line-height: normal;
    }
    .timeline p {
        font-size: 16px;
    }
}

/* / ABOUT */


/* ===================================== */


/* TEAM */

#team {
    background-color: var(--light-grey);
}

#team>div.container {
    padding-bottom: 100px;
}

.employers {
    display: flex;
    justify-content: space-between;
    text-align: center;
}

.employers h4 {
    font-size: 27px;
    padding-bottom: 5px;
}

.employers p {
    font-size: 17px;
    color: var(--grey);
    padding-bottom: 20px;
}

.employers img {
    width: 250px;
    border: 9px solid var(--lightest-grey);
    border-radius: 50%;
}

.emp-socials {
    display: flex;
    justify-content: center;
    gap: 20px;
}

.emp-socials a {
    background-color: var(--dark-grey);
    border-radius: 50%;
    width: 40px;
    height: 40px;
    position: relative;
}

.emp-socials a:hover {
    background-color: var(--black-hover);
}
/* ... */

